--- a/src/main/resources/templates/sample/detail.html
+++ b/src/main/resources/templates/sample/detail.html
@@ -3,14 +3,9 @@
 <head> 
     <title>Getting Started: Serving Web Content</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script>
-    	function goUrl(url) {
-    		location.href=url;
-    	}
-    </script>
 </head>
 <body>
-    <h1>list</h1>
+    <h1>detail</h1>
     
 	<table>
 	  <thead>
@@ -20,9 +15,9 @@
 	    </tr>
 	  </thead>
 	  <tbody>
-	    <tr  th:each="item: ${result}"   >
-	      <td ><a th:text="${item.id}" th:href="@{'/sample/detail/' + ${item.id}}" >Oranges</a></td>
-	      <td th:text="${item.name}">0.99</td>
+	    <tr >
+	      <td th:text="${result.id}">Oranges</td>
+	      <td th:text="${result.name}">0.99</td>
 	    </tr>
 	  </tbody>
 	</table>
