--- a/src/main/resources/templates/sample/list.html
+++ b/src/main/resources/templates/sample/list.html
@@ -3,10 +3,22 @@
 <head> 
     <title>Getting Started: Serving Web Content</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script>
+    <script th:inline="javascript" >
     	function goUrl(url) {
     		location.href=url;
     	}
+    	
+    	// inline
+    	var size = /* [[${#lists.size(result)}]] */ 1; 
+    	console.log(size);
+    	
+    	// multi line
+    	/*[+
+    	[# th:unless="${#lists.isEmpty(result)}" ]
+			console.log('hello, hidden code!'); 
+    	[/] 
+    	+]*/
+    	
     </script>
 </head>
 <body>
@@ -21,11 +33,25 @@
 	    </tr>
 	  </thead>
 	  <tbody>
-	    <tr  th:each="item: ${result}"   >
-	      <td ><a th:text="${item.id}" th:href="@{'/sample/detail/' + ${item.id}}" >id</a></td>
-	      <td th:text="${item.name}">name</td>
-	      <td th:text="${item.contentsCount}">1</td>
-	    </tr>
+	  	
+	  	<!-- normal -->
+	  	<!--/*/ <th:block th:unless="${#lists.isEmpty(result)}"  >  /*/-->
+		    <tr  th:each="item: ${result}"  th:with="url=@{'/sample/detail/' + ${item.id}}"   >
+		      <td ><a href="./detail.html" th:text="${item.id}" th:href="${url}" >id</a></td>
+		      <td onclick="javascript:goUrl('./detail.html');" th:onclick="'javascript:goUrl(\''+${url}+'\');'" th:text="${item.name}">name</td>
+		      <td data-hello="hi1" th:data-hello="${item.id}"  th:text="${item.contentsCount}">1</td> 
+		    </tr>
+	  	<!--/*/ </th:block> /*/-->
+	  	
+	  	<!-- empty -->
+	  	<!--/*/ 
+	  	<th:block th:if="${#lists.isEmpty(result)}" > 
+		  	<tr >
+		      <td colspan="3">no itmes</td>
+		    </tr>
+	  	</th:block>
+	  	/*/-->
+	  	
 	  </tbody>
 	</table>
     
