ajax sample: axios

--- a/src/main/resources/templates/html/footer.html
+++ b/src/main/resources/templates/html/footer.html
@@ -12,6 +12,9 @@
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 		-->
 
+		<!-- ajax -->
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 		<th:block th:replace="${customLinks}" ></th:block>
     </th:block>
 
