--- a/src/main/resources/templates/html/common/fragments.html
+++ b/src/main/resources/templates/html/common/fragments.html
@@ -15,6 +15,9 @@
 		<!-- ajax -->
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
+		<!-- utils -->
+		<script src="/js/vue_common.js"></script>
+
 		<th:block th:replace="${customLinks}" ></th:block>
     </th:block>
 
