vue validation plugin: Vuelidate

--- a/src/main/resources/templates/html/common/fragments.html
+++ b/src/main/resources/templates/html/common/fragments.html
@@ -15,6 +15,11 @@
 		<!-- ajax -->
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
+		<!-- validation -->
+		<script src="/js/lib/vuelidate.min.js"></script>
+		<!-- The builtin validators is added by adding the following line. -->
+		<script src="/js/lib/validators.min.js"></script>
+
 		<!-- utils -->
 		<script src="/js/vue_common.js"></script>
 
