--- a/src/main/resources/templates/html/vue_test.html
+++ b/src/main/resources/templates/html/vue_test.html
@@ -33,8 +33,12 @@
 		<div class="division" ></div>
 
 		<div >
-			<input type="checkbox" id="chkViewFlag" v-model="viewFlag">
+			<input type="checkbox" id="chkViewFlag" v-model="viewFlag"    />
 			<label for="chkViewFlag">viewFlag setting: {{ viewFlag }}</label>
+			<div >validation:  
+				<span>required: {{ $v.viewFlag.required }}</span>
+				<pre>{{ $v.viewFlag }}</pre>
+			</div>
 		</div>
 
 		<div class="division" ></div>
